# last7days-rent-skill

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: agent-native-redesign.md  architecture.md  dynamic-workflow-agents.md  goal-mode.md  hermes-agent-web-search-reference.md  integration-dry-run.md  jd-poc-agent-runtime-full-channel-plan-2026-06-14.md  jd-runtime-search-playbook.md  mvp-boundaries.md  poc-anchor-pack-scope.md  poc-jd-hq-runtime-profile-html.md  product-contract.md  progress-ledger-template.md  prompts.md  provider-architecture.md  release-checklist.md  runtime-adapter-contract.md  source-policy.md  subagent-handoffs.md  troubleshooting.md  user-guide.md
docs/runtime-evidence/: jd-hq-public-runtime-evidence-2026-06-14.json  jd-hq-public-runtime-pool-2026-06-14.json  jd-hq-public-runtime-report-2026-06-14.html
skills/last7days-rent/: SKILL.md
skills/last7days-rent/anchor_packs/: beijing-jd-hq-yizhuang.json
skills/last7days-rent/scripts/: last7days_rent.py
skills/last7days-rent/scripts/lib/: __init__.py  agent_evidence.py  anchor_pack.py  authorized_import.py  commute_plan.py  contact.py  dedupe.py  env.py  feedback.py  leads.py  listing_pool.py  normalize.py  office_anchor.py  pipeline.py  preference_questions.py  privacy.py  profile_identity.py  profile_schema.py  profile_store.py  profile_wizard.py  render.py  rerank.py  risk.py  schema.py  scoring.py  search_plan.py  secret_guard.py  seven_day_plan.py  store.py
skills/last7days-rent/scripts/lib/acquisition/: __init__.py  service.py  (+2 more)
skills/last7days-rent/templates/: report.html.j2
task/mvp-core/: 1.product_contract_and_scope.md  2.schema_privacy_risk_contract.md  2.skill_runtime_contract.md  3.dynamic_workflow_agents_docs.md  3.matching_dedupe_scoring_render.md  3.profile_onboarding_store_feedback.md  3.readme_install_prompts.md  3.source_adapters_and_discovery.md  4.integration_dry_run_docs.md  4.tests_fixtures_privacy.md  5.final_integration_and_validation.md
tests/: test_agent_evidence.py  test_anchor_pack.py  test_authorized_import.py  test_cli.py  test_contact.py  test_dedupe.py  test_feedback.py  test_http.py  test_jd_poc_runtime.py  test_live_smoke.py  test_normalize.py  test_pipeline_live_contract.py  test_positioning_docs.py  test_privacy.py  test_profile.py  test_profile_wizard.py  test_provider_acquisition.py  test_render.py  test_risk.py  test_runtime_adapter_contract.py  test_schema.py  test_scoring.py  test_search_plan.py  test_search_providers.py  test_secret_guard.py  test_skill_packaging.py  test_sources_p0.py  test_user_e2e.py
tests/fixtures/evidence/: jd_hq_runtime_evidence.json  jd_hq_runtime_evidence_l0_l1_blocked.json
tests/fixtures/pools/: jd_hq_listing_pool_expected.json
tests/fixtures/profile/: jd_hq_profile.json  profile.json
tests/fixtures/search_briefs/: jd_hq_search_brief.json
tests/fixtures/sources/: beike_lianjia.html  fang.html  official_verifier.txt  sensitive_text.txt  wellcee.html
tests/fixtures/websearch/: brave_search_success.json  exa_search_success.json  runtime_web_search_success.json  tavily_search_success.json
(+24 files in other folders)
