[project]
name = "last7days-rent-skill"
version = "0.1.0"
description = "Agent Skill and local CLI engine for helping users complete rental decisions in 7 days."
requires-python = ">=3.11"
dependencies = [
  "ddgs>=9.14,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/last7days-rent/scripts"]
addopts = "-q"
markers = [
  "live: exercises public live source smoke and may report source blocking",
]
